syntax = "proto3";

import "google/protobuf/descriptor.proto";

extend google.protobuf.MessageOptions {
  // 当前message是否解析
  string eigen_typename = 20001;
}

extend google.protobuf.FieldOptions {
  // 当前message是否解析
  bool inherits_from = 20002;
}

